--- a/demo/lit/jl-search-lit.html
+++ b/demo/lit/jl-search-lit.html
@@ -1,13 +1,9 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@1" /> -->
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans" />      -->
-
-
 <script type="module">
   import "./preload.mjs";
-  import "../../jl-search.mjs";
+  import "./jl-search-lit.mjs";
 </script>
 
 <style>
@@ -16,6 +12,8 @@
     font-size: 2rem;
   }
 </style>
+
+<p>Will come back to lit later...</p>
 
 <jl-search lock
           prefix="@"
