Popover and position

--- a/demo/plain/jl-search.html
+++ b/demo/plain/jl-search.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://para.se/2023/setup1.js"></script>
 
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@1" />
 <link rel="stylesheet" href="./theme.css" />
-
-
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@1"
-      rel="stylesheet" />
 <link rel="stylesheet" href="../../jl-search.css" />
 
 
@@ -167,7 +165,7 @@
       <span class="material-symbols-outlined">
         search
       </span>
-      <input autofocus id="field1" />
+      <input autofocus />
       <span class="material-symbols-outlined state-normal">
       </span>
     </label>
