Semantic html and animations

--- a/demo/color/colors.html
+++ b/demo/color/colors.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://para.se/2024/setup1.js"></script>
 
 
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@1"
 			rel="stylesheet" />
 <link rel="stylesheet" href="../plain/theme.css" />
-<link rel="stylesheet" href="../../jl-search.css" />
+
 
 <style>
 	:root {
@@ -17,11 +16,6 @@
 	label[for] {
 		padding-top: var(--padding);
 		white-space: nowrap;
-	}
-
-	jl-search {
-		--_border-radius: 1.5em;
-		max-width: 25em;
 	}
 
 	form {
@@ -38,6 +32,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		margin-top: 3rem;
 	}
 
 	section>div {
